News UAT/force-app/main/default/objects/CampaignMember/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <formula>HYPERLINK(&#39;/flow/CM_Update?CM_Id=&#39;+Id+&#39;&amp;Current_User_Id=&#39;+ $User.Id, &#39;Start&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>