News UAT/force-app/main/default/objects/CampaignMember/fields/Age_in_List__c.field-meta.xml
<CustomField>
    <fullName>Age_in_List__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in List</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>