News UAT/force-app/main/default/objects/CampaignMember/fields/Call_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Date__c</fullName>
    <description>Store the time to call back a Campaign member</description>
    <label>Call Back Date</label>
    <type>DateTime</type>
</CustomField>