News UAT/force-app/main/default/objects/CampaignMember/fields/Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Call_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Automatically set by the Execution UI 

Must be editable by the Campaign Coordinator or Team Lead</description>
    <inlineHelpText>Number of call attempts on this Campaign Member. Each Campaign has a maximum number of call attempts, which will prevent contact to the Member once the limit is reached.</inlineHelpText>
    <label>Call Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>