News UAT/force-app/main/default/objects/CampaignMember/fields/Call_Limit_Reached__c.field-meta.xml
<CustomField>
    <fullName>Call_Limit_Reached__c</fullName>
    <description>Useful for Reporting</description>
    <formula>Call_Count__c &gt; Campaign.Max_Call_Attempts__c</formula>
    <label>Call Limit Reached</label>
    <type>Checkbox</type>
</CustomField>