News UAT/force-app/main/default/objects/CampaignMember/fields/Campaign_Member_URL__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_URL__c</fullName>
    <description>URL field to access the Campaign Member in Reports</description>
    <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&#39;function&#39;) {srcUp(&#39;/&quot; + Id + &quot;/e&#39;); } else {window.location.assign(&#39;/&quot; + Id + &quot;/e&#39;) }&quot;, &#39;Edit &#39; &amp; FirstName &amp; &#39; &#39; &amp; LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>URL field to access the Campaign Member in Reports</inlineHelpText>
    <label>Campaign Member URL</label>
    <type>Text</type>
</CustomField>