News UAT/force-app/main/default/objects/CampaignMember/fields/Campaign_Membership_Count__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Membership_Count__c</fullName>
    <description>System-driven field to count the number of times a Member has been added in the campaign. For Retention and Contact Plans</description>
    <inlineHelpText>Members can be appear in Retention and Contact Plan campaigns multiple times</inlineHelpText>
    <label>Campaign Membership Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>