News UAT/force-app/main/default/objects/CampaignMember/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <formula>Campaign.StartDate</formula>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>