News UAT/force-app/main/default/objects/CampaignMember/fields/CompanyOrAccount__c.field-meta.xml
<CustomField>
    <fullName>CompanyOrAccount__c</fullName>
    <description>APEX code does not have access to the standard CompanyOrAccount field, this is a proxy field</description>
    <formula>CompanyOrAccount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompanyOrAccount</label>
    <type>Text</type>
</CustomField>