News UAT/force-app/main/default/objects/CampaignMember/fields/Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>