News UAT/force-app/main/default/objects/CampaignMember/fields/Contact_Plan_Division__c.field-meta.xml
<CustomField>
    <fullName>Contact_Plan_Division__c</fullName>
    <formula>Account__r.Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Division</label>
    <type>Text</type>
</CustomField>