News UAT/force-app/main/default/objects/CampaignMember/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <description>System stamped with the date that the Member is completed - when the Response is Yes or No</description>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>