News UAT/force-app/main/default/objects/CampaignMember/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Duplicate of the standard Description field - because APEX code cannot access the standard version</description>
    <formula>Description</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>