News UAT/force-app/main/default/objects/CampaignMember/fields/DNC_A_Number_is_Contactable__c.field-meta.xml
<CustomField>
    <fullName>DNC_A_Number_is_Contactable__c</fullName>
    <formula>if(NOT(ISBLANK(ContactId)), 
 Contact.DNC_A_Number_Is_Contactable__c 
, 
 Lead.DNC_A_Number_Is_Contactable__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNC A Number is Contactable</label>
    <type>Checkbox</type>
</CustomField>