News UAT/force-app/main/default/objects/CampaignMember/fields/DNC_Override__c.field-meta.xml
<CustomField>
    <fullName>DNC_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Campaign Leads and Coordinators - override DNC and display a Member in the Console List</description>
    <inlineHelpText>For Campaign Leads and Coordinators - override DNC and display a Member in the Console List</inlineHelpText>
    <label>DNC Override</label>
    <type>Checkbox</type>
</CustomField>