News UAT/force-app/main/default/objects/CampaignMember/fields/DNC_Summary__c.field-meta.xml
<CustomField>
    <fullName>DNC_Summary__c</fullName>
    <description>Bubble up the &#39;Is Contactable&#39; info from the Contact and Lead up to the Campaign Member Level for display at the Campaign member list for Campaign Coordinators/Team Leads to see</description>
    <formula>NOT(OR(Contact.DNC_A_Number_Is_Contactable__c, Lead.DNC_A_Number_Is_Contactable__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Member not contactable - all phone numbers of a Lead or Contact are not contactable</inlineHelpText>
    <label>DNC Summary</label>
    <type>Checkbox</type>
</CustomField>