News UAT/force-app/main/default/objects/CampaignMember/fields/Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Execution_Status__c</fullName>
    <description>Salesforce status to drive Execution, Read Only for users, automatically set by Salesforce</description>
    <label>Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Attempted</fullName>
            </value>
            <value>
                <fullName>Call to Do</fullName>
            </value>
            <value>
                <fullName>Call Limit Reached</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>