News UAT/force-app/main/default/objects/CampaignMember/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>IF( NOT(ISBLANK(ContactId)),  (Contact.FirstName + &#39; &#39; + Contact.LastName), IF(NOT(ISBLANK(LeadId)), (Lead.FirstName + &#39; &#39; + Lead.LastName), &#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>