News UAT/force-app/main/default/objects/CampaignMember/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Execution Control to mark a Member as currently in progress - opened by the Agent currently locking it</description>
    <label>In Progress</label>
    <type>Checkbox</type>
</CustomField>