News UAT/force-app/main/default/objects/CampaignMember/fields/Last_Booking_Line_Item_Publication_Divs__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Line_Item_Publication_Divs__c</fullName>
    <formula>Account__r.Last_Booking_Line_Item_Publication_Divs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Booking Line Item Publication Divs</label>
    <type>Text</type>
</CustomField>