News UAT/force-app/main/default/objects/CampaignMember/fields/Last_Booking_Value__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Value__c</fullName>
    <description>2015-05 UserStory16.3
Display Last Booking Value from Account (the field is updated through Booking trigger)</description>
    <formula>Account__r.Last_Booking_Value__c</formula>
    <label>Last Booking Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>