News UAT/force-app/main/default/objects/CampaignMember/fields/Lead_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_Name__c</fullName>
    <description>Used in campaign vf page.</description>
    <label>Lead/Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>