News UAT/force-app/main/default/objects/CampaignMember/fields/Locked_By__c.field-meta.xml
<CustomField>
    <fullName>Locked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current User updating the Member in Execution UI</description>
    <inlineHelpText>This is the user who has a lock on this Campaign Member</inlineHelpText>
    <label>Locked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members_Locked</relationshipName>
    <type>Lookup</type>
</CustomField>