News UAT/force-app/main/default/objects/CampaignMember/fields/Member_Notes__c.field-meta.xml
<CustomField>
    <fullName>Member_Notes__c</fullName>
    <description>Used by the Campaign Coordinator, FSAM and BD users. Expected usage is for the Coordinator to provide the value during Campaign import and setup, and FSAM and BD users to enter notes related to members.</description>
    <inlineHelpText>Member Notes from the Campaign Coordinator, FSAM and BD users.</inlineHelpText>
    <label>Member Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>