News UAT/force-app/main/default/objects/CampaignMember/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <formula>if(NOT(ISBLANK(ContactId)), &quot;Contact&quot;, &quot;Lead&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Type</label>
    <type>Text</type>
</CustomField>