News UAT/force-app/main/default/objects/CampaignMember/fields/Response_Comment__c.field-meta.xml
<CustomField>
    <fullName>Response_Comment__c</fullName>
    <description>Response Comment from the latest Campaign Response</description>
    <label>Latest Response Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>