News UAT/force-app/main/default/objects/CampaignMember/fields/Response_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Response_Datetime__c</fullName>
    <description>2015-04 UserStory16.3</description>
    <label>Latest Response Datetime</label>
    <type>DateTime</type>
</CustomField>