News UAT/force-app/main/default/objects/CampaignMember/fields/Response_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Sub_Type__c</fullName>
    <description>Response Comment from the latest Campaign Response</description>
    <inlineHelpText>Response Comment from the latest Campaign Response</inlineHelpText>
    <label>Latest Response Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Response_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Call Attempts Limit Reached</fullName>
            </value>
            <value>
                <fullName>Request Call Back - Same Agent</fullName>
            </value>
            <value>
                <fullName>Use Competitor Products</fullName>
            </value>
            <value>
                <fullName>Will Attend</fullName>
            </value>
            <value>
                <fullName>Will Not Attend</fullName>
            </value>
            <value>
                <fullName>Achieved Initial Objective</fullName>
            </value>
            <value>
                <fullName>Already Booked</fullName>
            </value>
            <value>
                <fullName>Awaiting Decision</fullName>
            </value>
            <value>
                <fullName>Awaiting Influencer</fullName>
            </value>
            <value>
                <fullName>Awaiting News Approval</fullName>
            </value>
            <value>
                <fullName>Booking Error</fullName>
            </value>
            <value>
                <fullName>Create Awareness (Branding)</fullName>
            </value>
            <value>
                <fullName>Credit Issues</fullName>
            </value>
            <value>
                <fullName>Current CRR Complaint</fullName>
            </value>
            <value>
                <fullName>Decision Maker Unavailable</fullName>
            </value>
            <value>
                <fullName>Disconnected/Wrong Number</fullName>
            </value>
            <value>
                <fullName>Duped Record</fullName>
            </value>
            <value>
                <fullName>Growing Business</fullName>
            </value>
            <value>
                <fullName>Maintain Presence</fullName>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>New Product or Service</fullName>
            </value>
            <value>
                <fullName>No Current Need</fullName>
            </value>
            <value>
                <fullName>No Interest in Offer</fullName>
            </value>
            <value>
                <fullName>No Interest With News Corp</fullName>
            </value>
            <value>
                <fullName>No ROI</fullName>
            </value>
            <value>
                <fullName>Opt Out From Further Contact</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Poor Match To Campaign</fullName>
            </value>
            <value>
                <fullName>Short Term Objective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>