News UAT/force-app/main/default/objects/CampaignMember/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <description>Response Comment from the latest Campaign Response</description>
    <inlineHelpText>Response Comment from the latest Campaign Response</inlineHelpText>
    <label>Latest Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>No Sales Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>