News UAT/force-app/main/default/objects/CampaignMember/validationRules/CpgnMem_Callback_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>CpgnMem_Callback_Date</fullName>
    <active>true</active>
    <description>A Callback Date can only be set if the Status is No Response or Maybe (Callback Statuses). This should only trigger for the Callback Date (not the Status field)</description>
    <errorConditionFormula>FALSE</errorConditionFormula>
    <errorMessage>A Call Back date can only be set if the Status is &#39;Call to Do&#39;</errorMessage>
</ValidationRule>