News UAT/force-app/main/default/objects/CampaignMember/validationRules/CpgnMem_Contact_Plan_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>CpgnMem_Contact_Plan_Date</fullName>
    <active>false</active>
    <description>A Contact Plan Date needs to be provided for Contact Plans 14/5/15: A change to picklist values make this rule moot.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Response_Sub_Type__c, &#39;Contact Plan&#39;), 
  ISBLANK( Contact_Plan_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Contact_Plan_Date__c</errorDisplayField>
    <errorMessage>A Contact Plan requires a Contact Plan Date</errorMessage>
</ValidationRule>